# scicalc

./: .gitignore  LICENSE  README.md  app.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  script.js  vite.config.js
backend/: app.py  requirements.txt
frontend/: index.html
frontend/src/: App.jsx  calculator.js  index.html  main.jsx  storage.js  style.css
static/: calculator.js  calculator.test.js  script.js  storage.js  style.css
templates/: index.html
